second part of main page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,49 @@
         </div>
       </div>
       <div class="middle-container"></div>
+      <div class="second-main-container">
+        <div class="text-container-second">
+          <h1>Join the League</h1>
+        </div>
+        <div class="photos-container">
+          <div class="inside-images-container">
+            <div class="image-1">
+              <img src="./images/poster-2.jpg" alt="" />
+              <div class="image-text-container">
+                <h6 id="image-1-heading">Battle Head-to-Head</h6>
+                <p id="image-1-paragraph">
+                  Combine strategic thinking, lightning reflexes and coordinated
+                  team-play to crush your enemies in both small-scale skirmishes
+                  and intense 5v5 battles.
+                </p>
+              </div>
+            </div>
+            <div class="image-2">
+              <img src="./images/poster-3.jpg" alt="" />
+              <div class="image-text-container">
+                <h6 id="image-2-heading">Play with your team</h6>
+                <p id="image-2-paragraph">
+                  In League of Legends, victory is often the result of a
+                  collective effort, emphasizing the significance of teamwork in
+                  the pursuit of success on the Summoner's Rift.
+                </p>
+
+                <h6 id="image-3-heading">Over 150 champions</h6>
+                <p id="image-3-paragraph">
+                  The constant addition of new champions and periodic updates to
+                  the game ensure a continually expanding and evolving selection
+                  for players.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="image-3">
+            <img src="./images/poster-1.jpg" alt="" />
+            <div class="image-text-container"></div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
