--- a/index.html
+++ b/index.html
@@ -69,15 +69,8 @@
                 <h6 id="image-2-heading">Play with your team</h6>
                 <p id="image-2-paragraph">
                   In League of Legends, victory is often the result of a
-                  collective effort, emphasizing the significance of teamwork in
-                  the pursuit of success on the Summoner's Rift.
-                </p>
-
-                <h6 id="image-3-heading">Over 150 champions</h6>
-                <p id="image-3-paragraph">
-                  The constant addition of new champions and periodic updates to
-                  the game ensure a continually expanding and evolving selection
-                  for players.
+                  collective effort, emphasizing the significance of teamwork<br />
+                  in the pursuit of success on the Summoner's Rift.
                 </p>
               </div>
             </div>
@@ -85,10 +78,25 @@
 
           <div class="image-3">
             <img src="./images/poster-1.jpg" alt="" />
-            <div class="image-text-container"></div>
+            <div class="image-text-container">
+              <h6 id="image-3-heading">Over 150 champions</h6>
+              <p id="image-3-paragraph">
+                The constant addition of new champions and periodic updates to
+                the game ensure a continually expanding and evolving selection
+                for players.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </main>
+
+    <footer>
+      <div class="footer-container">
+        <div class="logo">
+          <img class="img-class-footer" src="./images/logo-footer.png" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
