Sign Up Page (No Validation)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h4 class="regular">News</h4>
           <h4 class="regular">Champions</h4>
           <h4 class="regular">Shop</h4>
-          <h4 class="regular">Sign Up</h4>
+          <a href="./sign-up.html"><h4 class="regular">Sign Up</h4></a>
         </div>
       </div>
     </header>
