--- a/news.html
+++ b/news.html
@@ -45,6 +45,11 @@
           </div>
         </div>
 
+        <div class="slider-container">
+            <p>PREVIOUS NEWS</p>
+            <p>NEXT NEWS</p>
+          </div>
+
     </main>
 
   </body>
