--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/navbar.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
   </head>
   <body>
     <header>
