--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="nav-content">
           <h4 class="selected">Home</h4>
-          <h4 class="regular">News</h4>
+          <a href="./news.html"><h4 class="regular">News</h4></a>
           <h4 class="regular">Champions</h4>
           <h4 class="regular">Shop</h4>
           <a href="./sign-up.html"><h4 class="regular">Sign Up</h4></a>
