News Page Second Part

--- a/news.html
+++ b/news.html
@@ -50,6 +50,63 @@
             <p>NEXT NEWS</p>
           </div>
 
+          <div class="latest-container">
+            <div class="latest-container-divider">
+              <div class="latest-news">
+                <h1 class="main-title" style="color: white">Latest News</h1>
+              </div>
+            </div>
+            <div class="latest-news-main-container">
+              <div class="latest-news-left">
+                <div class="news-container">
+                  <img src="./images/news-1-edit.png" alt="" />
+                  <div class="text-news-container">
+                    <p>MEDIA</p>
+                    <h4>POP/STAR Performance | Mini Cinematic - TFT</h4>
+                    <h5>
+                      Chibi Headliner K/DA POP/STARS Kai’Sa, Pengu, and Choncc drop
+                      their dance cover of a K/DA classic.
+                    </h5>
+                    <h6>1 hour ago</h6>
+                  </div>
+                </div>
+    
+                <div class="news-container">
+                  <img src="./images/news-2.png" alt="" />
+                  <div class="text-news-container">
+                    <div class="text-news-container">
+                      <p>MEDIA</p>
+                      <h4>Winterblessed 2023</h4>
+                      <h5>Dance in winter’s reverie.</h5>
+                      <h6>1 hour ago</h6>
+                    </div>
+                  </div>
+                </div>
+    
+                <div class="news-container">
+                  <img src="./images/news-3.png" alt="" />
+                  <div class="text-news-container">
+                    <div class="text-news-container">
+                      <p>DEV</p>
+                      <h4>Behind the Bop: Steve Aoki Remix Rumble</h4>
+                      <h5>
+                        How Steve Aoki created the genre-defying track for TFT’s
+                        Remix Rumble music video.
+                      </h5>
+                      <h6>7 days ago</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="latest-news-right">
+                <img src="./images/news-group-1.png" alt="" />
+                <img src="./images/news-group-2.png" alt="" />
+                <img src="./images/news-group-3.png" alt="" />
+                <img src="./images/news-group-4.png" alt="" />
+              </div>
+            </div>
+          </div>
+
     </main>
 
   </body>
