--- a/news.html
+++ b/news.html
@@ -109,5 +109,13 @@
 
     </main>
 
+    <footer>
+      <div class="footer-container">
+        <div class="logo">
+          <img class="img-class-footer" src="./images/logo-footer.png" alt="" />
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
