Added Champs.html + bugs fixed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/navbar.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,8 @@
         <div class="nav-content">
           <h4 class="selected">Home</h4>
           <a href="./news.html"><h4 class="regular">News</h4></a>
-          <h4 class="regular">Champions</h4>
+          <a href="./champs.html"><h4 class="regular">Champions</h4></a>
+
           <h4 class="regular">Shop</h4>
           <a href="./sign-up.html"><h4 class="regular">Sign Up</h4></a>
         </div>
