--- a/sign-up.html
+++ b/sign-up.html
@@ -19,7 +19,8 @@
         <div class="nav-content">
           <a href="./index.html"><h4 class="regular">Home</h4></a>
           <a href="./news.html"><h4 class="regular">News</h4></a>
-          <h4 class="regular">Champions</h4>
+          <a href="./champs.html"><h4 class="regular">Champions</h4></a>
+
           <h4 class="regular">Shop</h4>
           <a href="./sign-up.html"><h4 class="selected">Sign Up</h4></a>
         </div>
@@ -35,7 +36,7 @@
         <img src="./images/sign-up-image.webp" alt="" />
         <p>© 2023 by Atlas. All Rights reserved.</p>
       </div>
-      <form action="./index.html" type="submit" class="right-container">
+      <form id="form" class="right-container">
         <div class="header-container">
           <h1 class="header">Create Account</h1>
         </div>
@@ -104,8 +105,8 @@
           />
         </div>
         <div class="button-container">
-          <input type="submit" onclick="validateForm()" value="Sign Up" />
-          <p>Already have an account? <span>Sign In</span></p>
+          <input type="submit" value="Sign Up" />
+          <p>Already have an account? <a href="./sign-in.html">Sign In</a></p>
         </div>
       </form>
     </div>
