--- a/sign-in.html
+++ b/sign-in.html
@@ -27,7 +27,8 @@
         <div class="nav-content">
           <a href="./index.html"><h4 class="regular">Home</h4></a>
           <a href="./news.html"><h4 class="regular">News</h4></a>
-          <h4 class="regular">Champions</h4>
+          <a href="./champs.html"><h4 class="regular">Champions</h4></a>
+
           <h4 class="regular">Shop</h4>
           <a href="./sign-up.html"><h4 class="selected">Sign Up</h4></a>
         </div>
@@ -50,7 +51,7 @@
         />
         <p>© 2023 by Atlas. All Rights reserved.</p>
       </div>
-      <form action="./index.html" type="submit" class="right-container">
+      <form id="form" class="right-container">
         <div class="header-container">
           <h1 class="header">Welcome Back</h1>
         </div>
@@ -68,8 +69,8 @@
           />
         </div>
         <div style="margin-top: 25%" class="button-container">
-          <input type="submit" onclick="validateForm()" value="Sign Up" />
-          <p>Already have an account? <span>Sign In</span></p>
+          <input type="submit" value="Sign Up" />
+          <p>Dont have an account? <a href="./sign-up.html">Sign Up</a></p>
         </div>
       </form>
     </div>
